--- a/public/css/public/custom.css
+++ b/public/css/public/custom.css
@@ -9,11 +9,11 @@ body {
 }
 
 * {
-    font-family: 'Product Sans';
+    font-family: 'Open Sans';
 }
 
 .navbar .navbar-brand {
-    font-family: 'Product Sans';
+    font-family: 'Open Sans';
     font-weight: 800;
     font-size: 24px;
 }
